public/stylesheets/main.css
/* Cross Browser Compatability CSS */
/**
 * html5doctor.com Reset Stylesheet (Eric Meyer's Reset Reloaded + HTML5 baseline)
 * v1.6.1 2010-09-17 | Authors: Eric Meyer & Richard Clark
 * html5doctor.com/html-5-reset-stylesheet/
 */

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

blockquote, q { quotes: none; }

blockquote:before, blockquote:after,
q:before, q:after { content: ""; content: none; }

ins { background-color: #ff9; color: #000; text-decoration: none; }

mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }

del { text-decoration: line-through; }

abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; }

table { border-collapse: collapse; border-spacing: 0; }

hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }

input, select { vertical-align: middle; }

/* Write your CSS styles here */

/* Palette color codes */
/* Palette URL: http://paletton.com/#uid=64i0x0kqTu9fIJKpOFjuhp3xJjR */

/* As hex codes */

.color-primary-0 { color: #4D29A5 }	/* Main Primary color */
.color-primary-1 { color: #9277D4 }
.color-primary-2 { color: #6238C9 }
.color-primary-3 { color: #371589 }
.color-primary-4 { color: #270B6C }

.color-secondary-1-0 { color: #821E9F }	/* Main Secondary color (1) */
.color-secondary-1-1 { color: #BB6DD0 }
.color-secondary-1-2 { color: #A32BC4 }
.color-secondary-1-3 { color: #690B84 }
.color-secondary-1-4 { color: #520369 }

.color-secondary-2-0 { color: #284BA1 }	/* Main Secondary color (2) */
.color-secondary-2-1 { color: #7690D2 }
.color-secondary-2-2 { color: #3860C6 }
.color-secondary-2-3 { color: #153586 }
.color-secondary-2-4 { color: #0B266A }

.color-complement-0 { color: #F0D226 }	/* Main Complement color */
.color-complement-1 { color: #FFEC82 }
.color-complement-2 { color: #FFE031 }
.color-complement-3 { color: #C8AB0B }
.color-complement-4 { color: #9E8600 }

/* Generated by Paletton.com © 2002-2014 */
/* http://paletton.com */

/***** Global *****/
body {
  background-color: #270B6C;
  font-size: 100%;
  margin: 20px;
  padding: 20px;
  font-family: 'Open Sans', sans-serif;
}

a {
  text-decoration: none;
}

h2 {
  font-size: 3em;
}

h3 {
  font-size: 1.5em;
}

p {
  font-size: 1em;
  color: #000;
}

.dark-container {
  /*background-color: #270B6C;*/
  height:  calc(100%-(204px+22px)); /*204 = logo-box, 22 = footer*/
  width: 100%;
  margin: 20px auto;
  text-align: center;
}

.light-container {
  height:  calc(100%-(204px+22px)); /*204 = logo-box, 22 = footer*/
  background-color: #F8F8F8;
  margin: 20px auto;
  border: 5px solid #284BA1;
}

.clear {
  clear: both;
}

.view-title {
  font-family: 'Cinzel Decorative', cursive;
  color: #153586;
  margin: 10px 2px 35px 2px;
  padding: 5px 10px;
}

#flash-message {
  color: #A32BC4;
  font-size:1.1em;
  margin: 5px;
}
 #flash-message-link {
   color: #A32BC4;
   text-decoration: underline;
 }

/***** Logo *****/
#logo-box {
  background-color: #270B6C;
  line-height: 0.8;
  border: 5px groove #C8AB0B;
  height: 204px;
}

#logo-box h1 {
  font-family:'Cinzel Decorative', cursive;
  font-size: 6em;
  color: #C8AB0B;
  text-shadow: -2px 3px 4px #9E8600;
  vertical-align: middle;
  text-align: left;
  padding: 30px;
}

#logo-box h3 {
  font-family: 'Mrs Saint Delafield', cursive;
  color: #7690D2;
  font-size: 3em;
  text-align: left;
  padding: 0 30px 30px 30px;
}

/***** Navbar *****/
nav {
  background-color: #BB6DD0;
}
nav ul {
  list-style: none;
  margin: 5px 0px;
  overflow: hidden;
}

nav li {
  float: left;
  border-right: 4px solid #270B6C;
}

nav li:last-child {
  float: right;
  border-right: none;
}

nav li a {
  display: block;
  /*background-color: #BB6DD0;*/
  color: #520369;
  font-size: 1em;
  font-weight: 600;
  text-align: center;
  padding: 14px 16px;
}

nav li a:hover {
  background-color: #520369;
  color: #A32BC4;
}

/*nav:after {
  content: "";
  clear: both;
}*/

/***** Button *****/
button {
  background-color: #C8AB0B;
  font-family: 'Cinzel Decorative', cursive;
  font-size: 1em;
  color: #FFEC82;
  border: 2px solid #FFEC82;
  border-radius: 10px;
  margin: 5px;
  padding: 5px 10px;
}

.inline {
  font-size: 0.9em;
  padding: 2px 8px;
}

button:hover {
  background-color: #FFEC82;
  /*font-family: 'Open Sans', sans-serif;
  font-size: 1em;*/
  color: #9E8600;
  border: 2px solid #9E8600;
}

button a {
  /*font-family: 'Open Sans', sans-serif;
  font-size: 1em;*/
  color: #FFEC82;
  /*text-shadow: 0px 1px 1px #6990E8;*/
  text-decoration: none;
}

button a:hover {
  /*font-family: 'Open Sans', sans-serif;
  font-size: 1em;*/
  color: #9E8600;
  /*text-shadow: 0px 1px 1px #6990E8;*/
  /*text-decoration: none;*/
}

#home-button {
  font-family: 'Cinzel Decorative', cursive;
  font-size: 3em;
  margin: 50px 25px;
}

#fawe-button {
  width: 70px;
}

.table-button {
  background-color: #9E8600;
  font-family: 'Open Sans', sans-serif;
  /*color: #7690D2;*/
  border-color: #FFE031;
}

.table-button a{
  color: #FFE031;
}
/***** Form *****/
.form-container {
  background-color: #F8F8F8;
  border: 5px solid #284BA1;
  margin: 20px auto;
  padding: 20px;
  line-height: 1.5em;
}

.form-container h2 {
  font-family: 'Cinzel Decorative', cursive;
  color: #153586;
  margin: 10px 2px 35px 2px;
  padding: 5px 10px;
}

.form-container h3 {
  font-family: 'Cinzel Decorative', cursive;
  color: #153586;
  margin: 10px 0px 2px 2px;
  padding: 5px 10px;
}

.form-container p {
  /*line-height: 1.5em;*/
  font-size: 0.9em;
  color: #3860C6;
}

form {
  margin: 5px;
}
input {
  font-size: 1em;
}

input:focus, input:hover {
  background-color: #FFEC82;
}

input#submit {
  background-color: #C8AB0B;
  font-family: 'Cinzel Decorative', cursive;
  font-size: 1.2em;
  color: #FFEC82;
  border: 2px solid #FFEC82;
  border-radius: 10px;
  padding: 5px 10px;
}

input#submit:hover {
  background-color: #FFEC82;
  color: #9E8600;
  border: 2px solid #9E8600; /* could be replaced with border-color: #9E8600; ? */
}

input#table-submit {
  background-color: #9E8600;
  font-family: 'Open Sans', sans-serif;
  color: #FFE031;
  border: 2px solid #FFE031;
  border-radius: 10px;
  padding: 5px 10px;
}

input#table-submit:hover {
  background-color: #FFEC82;
  color: #9E8600;
  border-color: #9E8600;
}

/***** Table *****/
table {
  width: 75%;
  margin: 10px;
}

td {
  padding: 7px 10px 10px 10px;
}

tr {
  border-bottom: 2px solid #E8E8E8;
}

.table-title {
  background-color: #153586;
  font-family: 'Cinzel Decorative', cursive;
  color: #7690D2;
  margin: 2px;
  padding: 5px 10px;
}

/***** Footer *****/
footer {
  background-color: #7690D2;
  border: 5px groove #284BA1;
  margin: 0px 0;
  padding: 5px;
  text-align: center;
  height: 22px;
}

footer a {
  color: #153586;
}

footer a:hover {
  color: #FFEC82;
}

footer h6 {
  font-family: 'Cinzel Decorative', cursive;
  font-size: 1em;
  color: #153586;
}

